--- a/float.yaml
+++ b/float.yaml
@@ -8,7 +8,7 @@ resources:
   inst1:
     type: OS::Nova::Server
     properties:
-      key_name: heat_latest
+      key_name: key
       flavor: m1.amphora
       image: ub
       networks:
