--- a/script_vz.yaml
+++ b/script_vz.yaml
@@ -11,6 +11,7 @@ resources:
     properties:
       flavor: m1.medium
       image: ubunut-test
+      key_name: vinod
       networks:
         - network: SDN-NFV-Demo-Titus-PN10
       user_data: |
