--- a/test.yaml
+++ b/test.yaml
@@ -16,7 +16,7 @@ resources:
         - network: SDN-NFV-Demo-Titus-PN10
       user_data: |
       
-            #!/bin/bash
+            #!/usr/bin/env bash
             echo "Hello world"
             echo "Setting MySQL root password"
             echo "Hello world"
