--- a/test.yaml
+++ b/test.yaml
@@ -14,15 +14,15 @@ resources:
       key_name: vinod
       networks:
         - network: SDN-NFV-Demo-Titus-PN10
-      user_data: |
-      
-            #!/usr/bin/env bash
-            echo "Hello world"
-            echo "Setting MySQL root password"
-            echo "Hello world"
-            echo "Hello world"
-            echo "Hello world"
-            echo "Hello world"
+      user_data: 
+        template: |
+        #!/usr/bin/env bash
+        echo "Hello world"
+        echo "Setting MySQL root password"
+        echo "Hello world"
+        echo "Hello world"
+        echo "Hello world"
+        echo "Hello world"
 
   association:
     type: OS::Nova::FloatingIPAssociation
