--- a/test.yaml
+++ b/test.yaml
@@ -14,8 +14,7 @@ resources:
       key_name: vinod
       networks:
         - network: SDN-NFV-Demo-Titus-PN10
-      user_data: 
-        template: |
+      user_data: |
   
   association:
     type: OS::Nova::FloatingIPAssociation
