--- a/test.yaml
+++ b/test.yaml
@@ -14,8 +14,8 @@ resources:
       key_name: vinod
       networks:
         - network: SDN-NFV-Demo-Titus-PN10
-      user_data: |
-  
+      user_data: 
+        get_file: https://github.com/VinodSarma/heat_samples/blob/master/script_vz.yaml
   association:
     type: OS::Nova::FloatingIPAssociation
     properties:
