--- a/test.yaml
+++ b/test.yaml
@@ -14,9 +14,8 @@ resources:
       key_name: vinod
       networks:
         - network: SDN-NFV-Demo-Titus-PN10
-      user_data: 
-        run_cmd: 
-          - echo "test message" >> message_from_cloud_init.txt
+      user_data: |
+        - echo "test message" >> message_from_cloud_init.txt
   association:
     type: OS::Nova::FloatingIPAssociation
     properties:
