--- a/test.yaml
+++ b/test.yaml
@@ -18,7 +18,7 @@ resources:
         str_replace: 
           template: |
             #!/bin/bash -v
-            echo "VINOD" > test.txt
+            - echo "VINOD" > test.txt
         
   association:
     type: OS::Nova::FloatingIPAssociation
