--- a/test1.yaml
+++ b/test1.yaml
@@ -16,6 +16,8 @@ resources:
         - network: SDN-NFV-Demo-Titus-PN10
       user_data_format: RAW
       user_data: \n
+        #!/bin/bash
+        echo "TEST" > vinod.txt
         
   association:
     type: OS::Nova::FloatingIPAssociation
