--- a/test.yaml
+++ b/test.yaml
@@ -16,9 +16,11 @@ resources:
         - network: mgmt1
       user_data_format: RAW
       user_data: 
-        #!/bin/bash
-        sudo apt-get update
-        echo "TEST" > ~/vinod.txt
+        str_replace:
+          template: |
+            #!/bin/bash
+            sudo apt-get update
+            echo "TEST" > ~/vinod.txt
         
   association:
     type: OS::Nova::FloatingIPAssociation
