--- a/test.yaml
+++ b/test.yaml
@@ -15,7 +15,13 @@ resources:
       networks:
         - network: mgmt1
       user_data_format: RAW
-        
+      user_data: 
+        str_replace:
+          template: 
+            #!/bin/bash
+            sudo apt-get update
+            echo "Hello world"
+            echo "Setting MySQL root password"
   association:
     type: OS::Nova::FloatingIPAssociation
     properties:
