--- a/test1.yaml
+++ b/test1.yaml
@@ -13,6 +13,7 @@ resources:
       image: ubunut-test
       networks:
         - network: mgmt1
+      user_data_format: HEAT_CFNTOOLS
       user_data:
         str_replace: 
           template: |
