--- a/test.yaml
+++ b/test.yaml
@@ -11,6 +11,7 @@ resources:
     properties:
       flavor: m1.medium
       image: ubunut-test
+      key_name: vinod
       networks:
         - network: mgmt1
       user_data_format: HEAT_CFNTOOLS
