--- a/test.yaml
+++ b/test.yaml
@@ -11,7 +11,7 @@ resources:
     properties:
       flavor: m1.medium
       image: ubunut-test
-      key_name: new
+      key_name: key1
       networks:
         - network: mgmt1
       user_data_format: HEAT_CFNTOOLS
