--- a/test.yaml
+++ b/test.yaml
@@ -19,7 +19,12 @@ resources:
          #!/bin/bash
          sudo apt-get update
          echo "Hello world" > ~/test
-
+  config:
+    type: OS::Heat::SoftwareConfig
+    properties:
+      config:
+        get_file: https://github.com/VinodSarma/heat_samples/edit/master/test.yaml
+  
   association:
     type: OS::Nova::FloatingIPAssociation
     properties:
