--- a/test.yaml
+++ b/test.yaml
@@ -15,14 +15,15 @@ resources:
       image: ubunut-test
       networks:
         - network: mgmt1
-      user_data_format: HEAT_CFNTOOLS
+      user_data_format: SOFTWARE_CONFIG
       user_data:
         str_replace:
           template: 
             #!/bin/sh
             sudo apt-get update
             echo "Hello world" > ~/test
-            
+          params: {}
+          
   association:
     type: OS::Nova::FloatingIPAssociation
     properties:
