--- a/1.yaml
+++ b/1.yaml
@@ -14,4 +14,4 @@ outputs:
   server_id:
     value: {get_resource: server}
   server_ip:
-    value: {get_attr: [server, networks, demo-network, 0]}
+    value: {get_attr: [server, networks, mgmt1, 0]}
